# someip

./: .gitignore  README  commit.sh
docs/: consumer_provider.wsd
src/attributes/: CMakeLists.txt  README
src/attributes/src/: E02AttributesClient.cpp
src/attributes/src-gen/v1/commonapi/examples/: CommonTypes.hpp  CommonTypesSomeIPDeployment.cpp  CommonTypesSomeIPDeployment.hpp  E02Attributes.hpp  E02AttributesProxy.hpp  E02AttributesProxyBase.hpp  E02AttributesSomeIPDeployment.cpp  E02AttributesSomeIPDeployment.hpp  E02AttributesSomeIPProxy.cpp  E02AttributesSomeIPProxy.hpp  E02AttributesSomeIPStubAdapter.cpp  E02AttributesSomeIPStubAdapter.hpp  E02AttributesStub.hpp  E02AttributesStubDefault.hpp
src/methods/: CMakeLists.txt  README
src/methods/fidl/: E03Methods-SomeIP.fdepl
src/methods/protobuf/: requestMsg.proto
src/methods/src/: E03MethodServiceHandler.cpp  E03MethodServiceHandler.h  E03MethodsClient.cpp  E03MethodsService.cpp  E03MethodsServiceHandler.cpp  E03MethodsServiceHandler.h  E03MethodsServiceRequestManager.cpp  E03MethodsServiceRequestManager.h  E03MethodsStubImpl.cpp  E03MethodsStubImpl.hpp  myHandler.cpp  myHandler.h  requestMsg.pb.cc
src/methods/src-gen/v1/commonapi/examples/: E03MethodsSomeIPStubAdapter.cpp  E03MethodsSomeIPStubAdapter.hpp  debug.hpp
